# nicknames

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  JavaParser.java  JavaParser.md  NYS_Names_To_Add_1.csv  ProjectHome.md  PythonParser.md  R-parser.R  README.md  csv_to_rdf.py  name_NYS.R  name_lookup.pl  names-counter.pl  names-mysql.sql  names.csv  names.sql  names_2.csv  normalize.py  python-parser.py
.github/workflows/: ci.yml  release-python.yml  release.yml
js/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
js/scripts/: build-data.mjs
js/src/: index.ts  types.ts
js/test/: index.test.ts
python/: README.md  cp.py  cp.sh  hatch_build.py  pyproject.toml  test_package.py
python/src/nicknames/: __init__.py  _compat.py  _csvfile.py  _nicknamer.py  _version.py
python/src/sql/: generate_sql.py
python/src/us_nicknames/: __init__.py
sql/: create_name_relationships.sql  create_nicknames.sql  example_queries.sql  generate_sql.py  names.sql  names_normalized.sql  names_queries.sql
trunk/: names.csv
wiki/: JavaParser.wiki  PythonParser.wiki
